Name: frelm-public-library
Version: 0.1

Synopsis:
  Alternative server for hosting the Elm Public Library

Description:
  Generates web pages for documentation

Homepage: http://package.frelm.org

License: BSD3
License-file: LICENSE

Author:     Ryan Rempel
Maintainer: rgrempel@gmail.com
Copyright:  Copyright (c) 2013-2014 Evan Czaplicki

Category: Language

Build-type: Simple
Cabal-version: >=1.9

source-repository head
  type:     git
  location: git://github.com/rgrempel/package.frelm.org.git

Executable run-server
  hs-source-dirs:
    src/backend

  Main-is:
    Main.hs

  ghc-options:
    -threaded -O2 -W -rtsopts

  Build-depends:
    aeson,
    aeson-pretty,
    base >=4.2 && <5,
    binary,
    blaze-html,
    bytestring,
    cmdargs,
    containers,
    elm-compiler == 0.18,
    frelm-package,
    directory,
    filepath,
    mtl,
    snap-core < 1.0.0,
    snap-server,
    text,
    time,
    unordered-containers
